<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="tip_percentage">15%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="enter_weight">weight</string>
    <string name="enter_height">height</string>
    <string name="enter_age">age</string>
    <string name="choose_gender">gender</string>
    <string name="gender">gender</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="cal">cal</string>
    <string name="what_can_i_eat">what can i eat</string>
    <string name="question1">orem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mollis erat at urna consectetur tempus. Sed a ullamcorper nulla, id vulputate arcu. Donec ac euismod lorem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Mauris dapibus metus eu nisl placerat, id iaculis tortor porttitor. Vestibulum nisl augue, ultricies in efficitur eu, finibus quis leo. Morbi elementum congue mi, eu tristique dolor dictum id. Donec malesuada sapien ut libero tempor commodo. Donec imperdiet lorem in tempor venenatis. Vivamus mauris erat, condimentum cursus nisl nec, faucibus pellentesque orci. Vestibulum iaculis sagittis tellus quis imperdiet. Aenean facilisis quam mi, suscipit fringilla elit tincidunt non. Nunc porta faucibus urna, at egestas arcu faucibus nec.</string>
    <string name="question2">Nunc sagittis a nisl nec dapibus. Morbi vitae lectus ut ligula condimentum interdum nec at sapien. Aliquam erat volutpat. Nam tincidunt metus in rhoncus dignissim. Cras in varius tortor, vel fermentum felis. Pellentesque sollicitudin iaculis est id gravida. Suspendisse nec eleifend urna, non blandit nulla. Nulla tristique purus quis enim egestas pellentesque. Mauris a risus sed quam suscipit hendrerit nec id nulla. Nulla eget leo tellus. Pellentesque gravida vehicula purus, quis posuere ex luctus sed. Donec vel velit suscipit tortor condimentum tempor.</string>
    <string name='question3'>Vivamus sodales ultricies nunc eu porta. Nulla molestie fermentum commodo. Fusce id libero vel eros finibus venenatis vitae a odio. Sed et purus tempus, volutpat augue et, sollicitudin tellus. Quisque erat lacus, facilisis nec tortor in, efficitur placerat ipsum. Quisque eget finibus mi. Praesent lobortis posuere risus, eu elementum orci congue sit amet. Fusce blandit, purus in varius faucibus, urna sem varius justo, eu porttitor magna ligula non urna. Proin finibus luctus risus at vestibulum. Aenean sit amet pulvinar eros, eu sodales orci.</string>
    <string name='question4'>Vivamus ultrices laoreet metus non ultrices. Sed in mauris vel nulla feugiat fermentum et id felis. Donec scelerisque odio tincidunt ipsum mollis tristique. Donec sagittis eleifend vehicula. Aliquam ut convallis neque. Donec ullamcorper pellentesque semper. Quisque ac tincidunt massa, quis posuere sapien. Maecenas mauris risus, hendrerit nec lacus ac, tempor blandit est. Duis cursus mattis hendrerit.</string>
    <string name='question5'>Maecenas et rhoncus enim. Duis tincidunt, arcu in pellentesque pharetra, libero enim vestibulum ipsum, finibus lobortis dolor odio sagittis nibh. Aenean quis turpis augue. Aliquam laoreet nunc enim, vitae scelerisque ante aliquam nec. Nulla ornare quam nec interdum euismod. Aenean varius urna at lectus congue, ut aliquam felis dictum. Phasellus at molestie nisi, eu fermentum mauris.</string>
    <string name='question6'>Sed vitae vehicula nulla. Donec et nisi ut metus accumsan accumsan. Nulla id metus convallis, consequat arcu sit amet, placerat odio. Phasellus vulputate orci sed eros feugiat scelerisque. Etiam at nisi non nisi maximus euismod aliquet vel enim. Etiam ut convallis urna. Aenean pellentesque nisl felis, semper rhoncus urna molestie in. Nam in augue nec nulla auctor semper vitae sit amet lectus. In et mauris tellus. Cras ut quam mauris. Nunc pulvinar vel nisi dictum condimentum. Donec at sapien velit. Integer a finibus dui, et dapibus est. Morbi fermentum quam augue, vel dignissim purus facilisis vel.</string>

</resources>
